deploy: 775d12a603462a7e00fe7ff37077903215f10961

--- a/ham-radio-faq/index.html
+++ b/ham-radio-faq/index.html
@@ -179,7 +179,7 @@ capabilities before you buy.</p><p>There are ham radio conventions of various si
 each month and these usually have big swapmeets. Be prepared to see a lot of
 <strong>junk</strong>. This is stuff that won&rsquo;t power on, could barely be used for parts,
 and looks like it barely survived a nuclear war. Keep your eye out for the
-more well-maintained items there.</p><p>If you have your license, be sure to check out the <a href=https://forums.qrz.com/index.php?forums/ham-radio-gear-for-sale.7/>online swapmeet on QRZ</a>!
+more well-maintained items there.</p><p>If you have your license, be sure to check out the <a href=https://forums.qrz.com/>online swapmeet on QRZ</a>!
 That&rsquo;s where I got my Icom 746. The spouse of a silent keyer (a ham radio
 operator who passed away 😔) was trying to make ends meet by selling some
 equipment and I got a great deal on the radio.</p><p>eBay is okay for some things (especially ham-made gear, like antennas), but
